# pytorch-gpu-anatomy

./: .gitignore  README.md  pyproject.toml
.angreal/: angreal.toml  init.py  task_dev.py  task_lint.py  task_tests.py
docs/: autograd_inspection_deep_dive.md  autograd_inspection_summary.md  c01_tensor_semantics.md  c02_sync_points.md  c03_autograd_inspection.md  contiguity_deep_dive.md  contiguity_summary.md  sync_points_deep_dive.md  sync_points_summary.md
insights/: insights.md
notebooks/: gpt.ipynb
src/benchmarks/: __init__.py  __main__.py  c01_tensor_semantics.py
